apps/jellyfin/deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - image: linuxserver/jellyfin:10.11.11
          name: jellyfin
          resources:
            requests:
              cpu: 10m
              memory: 600Mi
            limits: {}
          ports:
            - containerPort: 8096
              protocol: TCP
            - containerPort: 7359
              protocol: UDP
            - containerPort: 1900
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: jellyfin
            - mountPath: /data/Movies
              name: library
              subPath: movies
            - mountPath: /data/TVShows
              name: library
              subPath: tv-shows
            - mountPath: /data/Anime
              name: library
              subPath: anime
            - mountPath: /data/MyAnime
              name: library
              subPath: myanime
            - mountPath: /data/Music
              name: library
              subPath: music
            - mountPath: /data/Books
              name: library
              subPath: books
            - mountPath: /data/Pictures
              name: library
              subPath: pictures
            - mountPath: /data/PS4
              name: library
              subPath: PS4
            - mountPath: /data/VHS
              name: library
              subPath: video
      restartPolicy: Always
      volumes:
        - name: jellyfin
          persistentVolumeClaim:
            claimName: jellyfin
        - name: library
          persistentVolumeClaim:
            claimName: plex-library
