apps/jellyfin/service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  ports:
    - name: "web-ui"
      port: 8096
      targetPort: 8096
    - name: "network-discovery"
      port: 7359
      protocol: UDP
      targetPort: 7359
    - name: "dlna"
      port: 1900
      protocol: UDP
      targetPort: 1900
  selector:
    app: jellyfin
