apps/jellyfin/ingress-jellyfin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: plex
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              number: 8096
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - jellyfin.almothana.xyz
      secretName: almothana-xyz-tls
